--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # This will be the first part of the title tag for your site <title> site.name + page.title </title>
-title: Supply
+title: Vsense
 url: "https://supply.templates.supply" # the base hostname & protocol for your site, e.g. http://example.com, also used in jekyll-seo-tag
 baseurl:
 repo: https://github.com/YJPL/Supply/
